<resources>
    <string name="app_name">Ride</string>


    <!-- SPLASH SCREEN STRINGS -->
    <string name="text_splash_screen_hello">Hello world!</string>
    <string name="name_app">InRide</string>
    <string name="content_desc_micro">img_microbus</string>
    <string name="content_desc_pastilla">pastilla</string>
    <!-- NAVIGATION STRINGS -->
    <string name="text_nav_reservations">Reservations</string>
    <string name="text_nav_record">History</string>
    <string name="text_nav_location">Location</string>
    <string name="text_nav_notifications">Notifications</string>


    <!-- CONTENT DESCRIPTIONS STRINGS -->
    <string name="text_content_description_ic_navigation">Es un icono de navegación.</string>

    <!-- RESERVATIONS STRINGS -->
    <string name="text_resetvations_hello">Dashboard!</string>

    <!-- NOTIFICATIONS STRINGS -->
    <string name="text_settings_hello">Settings!</string>

    <!-- LOCATION STRINGS -->
    <string name="text_location_hello">Location!</string>
    <!-- RECORD STRINGS -->
    <string name="text_record_hello">Reservations record!</string>


    <!-- LOTTIE STRINGS -->

    <string name="lottie_fragment_reservations_part1"><b>Loading data from server</b>  </string>
    <string name="lottie_fragment_reservations_part2">Please wait</string>
    <string name="lottie_fragment_map_part1">The Driver service is currently down</string>
   <!-- <string name="lottie_fragment_map_part1">The Driver hasn\'t activated the service</string>-->
    <string name="lottie_fragment_map_part2">Come back later</string>
    <string name="lottie_fragment_reservations_transact_part1"><b>Generating Reservation</b>  </string>
    <string name="lottie_fragment_reservations_transact_part2">Please wait</string>


    <!-- Reservation cardview (list_row_reservation)-->
    <string name="reservation_id">Reservation ID</string>
    <string name="date">Date</string>
    <string name="status">Round Status</string>
    <string name="reservation_count">Reservation Count</string>
    <string name="round">Viaje</string>
    <string name="schedule">Schedule</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_reservations">Reservations</string>
    <string name="title_notifications">Notifications</string>
    <string name="two_format_string">%1$s %2$s</string>
    <string name="reservado">Cancelar</string>



    <string name="reservation_number"> 1</string>
    <string name="reservation_result"><b>Your round number</b></string>
    <string name="reservation_finished">Your Round has finished</string>
    <string name="reservation_begun">Your Round has begun</string>

    <!-- LOGIN STRINGS -->
    <string name="login">Login</string>
    <string name="registrarse">Registrarse</string>
    <string name="password_hint">password</string>
    <string name="apellido_hint">apellido</string>
    <string name="nombre_hint">nombre</string>
    <string name="email_hint">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password"> Forgot Password?</string>
    <string name="ingresar">Ingresar</string>

    <!-- Firebase NOTIFICATIONS STRINGS-->


    <string name="quickstart_message">Click the SUBSCRIBE TO SERVICE button below to subscribe to the
        SERVICE topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Service</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to service topic</string>
    <string name="fcm_message">FCM Message</string>

    <!-- STRINGS FOR CARDVIEW 2.0-->
    <string name="reservar_btn">Reservar</string>

    <string name="title_activity_maps">Map</string>

    <string name="tu_reserva">Ride</string>
    <string name="listo_para_reservar">Listo para reservar</string>
    <string name="viaje_en_espera">Viaje en espera</string>
    <string name="viaje_en_camino">Viaje en camino</string>
    <string name="viaje_finalizado">Viaje finalizado</string>
    <string name="cupos">Cupos</string>
    <string name="num_quantity_sit">0</string>
    <string name="txt_horario">Horario</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="horario_value">xxxxxxx</string>
    <string name="fecha_value">xxxxx</string>
    <string name="txt_horario_title">Horario:</string>
    <string name="fecha_txt_title">Fecha:</string>
    <string name="txt_dialog">¿Seguro que desea cerrar sesión?</string>
    <string name="txt_cancelar">Cancelar</string>
    <string name="txt_aceptar">Aceptar</string>



</resources>
