<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="#F1F1F1"
       tools:ignore="UselessParent">
       
       <androidx.cardview.widget.CardView
           app:cardCornerRadius="15dp"
           app:cardMaxElevation="13dp"
           android:layout_width="match_parent"
           android:layout_height="493dp"
           android:layout_margin="25dp">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="185dp"
                   android:orientation="vertical">

                   <ImageView
                       android:id="@+id/imageView"
                       android:layout_width="wrap_content"
                       android:layout_height="0dp"
                       android:layout_marginTop="6dp"
                       android:layout_weight="1"
                       android:contentDescription="@string/content_desc_micro"
                       tools:srcCompat="@drawable/img_microbus" />

                   <View
                       android:id="@+id/divider"
                       android:layout_width="wrap_content"
                       android:layout_height="2dp"
                       android:layout_marginStart="8dp"
                       android:layout_marginTop="8dp"
                       android:layout_marginEnd="8dp"
                       android:background="#EBE0E0" />
               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="280dp"
                   android:layout_marginStart="20dp"
                   android:layout_marginTop="13dp"
                   android:layout_marginEnd="20dp"
                   android:layout_marginBottom="15dp"
                   android:background="@drawable/border"
                   android:orientation="vertical">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="@dimen/txt_margin_start"
                       android:layout_marginTop="@dimen/txt_margin_top"
                       android:text="@string/status" />

                   <View
                       android:layout_width="wrap_content"
                       android:layout_height="1dp"
                       android:layout_marginStart="25dp"
                       android:layout_marginTop="2dp"
                       android:layout_marginEnd="25dp"
                       android:background="#EBE0E0" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="@dimen/txt_margin_start"
                       android:layout_marginTop="@dimen/txt_margin_top"
                       android:text="@string/date" />

                   <View
                       android:layout_width="wrap_content"
                       android:layout_height="1dp"
                       android:layout_marginStart="25dp"
                       android:layout_marginTop="2dp"
                       android:layout_marginEnd="25dp"
                       android:background="#EBE0E0" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="@dimen/txt_margin_start"
                       android:layout_marginTop="@dimen/txt_margin_top"
                       android:text="@string/reservation_count" />

                   <View
                       android:layout_width="wrap_content"
                       android:layout_height="1dp"
                       android:layout_marginStart="25dp"
                       android:layout_marginTop="2dp"
                       android:layout_marginEnd="25dp"
                       android:background="#EBE0E0" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="@dimen/txt_margin_start"
                       android:layout_marginTop="@dimen/txt_margin_top"
                       android:text="@string/round" />

                   <View
                       android:layout_width="wrap_content"
                       android:layout_height="1dp"
                       android:layout_marginStart="25dp"
                       android:layout_marginTop="2dp"
                       android:layout_marginEnd="25dp"
                       android:background="#EBE0E0" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="@dimen/txt_margin_start"
                       android:layout_marginTop="@dimen/txt_margin_top"
                       android:layout_marginBottom="0dp"
                       android:text="@string/schedule" />

                   <View
                       android:layout_width="wrap_content"
                       android:layout_height="1dp"
                       android:layout_marginStart="25dp"
                       android:layout_marginTop="2dp"
                       android:layout_marginEnd="25dp"
                       android:layout_marginBottom="8dp"
                       android:background="#EBE0E0" />

                   <Button
                       android:layout_width="125dp"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center_vertical|center_horizontal"
                       android:text="@string/reservar_btn"
                       android:textAllCaps="false" />

               </LinearLayout>

           </LinearLayout>

       </androidx.cardview.widget.CardView>
       
   </LinearLayout>

</RelativeLayout>