<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/container_fragments"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/container_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/container_navigation"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="255dp"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/container_layout_reservation"
            android:layout_width="0dp"
            android:clickable="true" android:focusable="true"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/image_view_nav_reservation"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="60"
                android:contentDescription="@string/text_content_description_ic_navigation"
                app:srcCompat="@drawable/ic_reservation" />

            <TextView
                android:id="@+id/text_view_nav_reservation"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="40"
                android:fontFamily="@font/roboto"
                android:text="@string/text_nav_reservations"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_layout_location"
            android:layout_width="0dp"
            android:clickable="true" android:focusable="true"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/image_view_nav_location"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="60"
                android:contentDescription="@string/text_content_description_ic_navigation"
                app:srcCompat="@drawable/ic_location" />

            <TextView
                android:id="@+id/text_view_nav_location"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="40"
                android:fontFamily="@font/roboto"
                android:text="@string/text_nav_location"
                android:textAlignment="center" />

        </LinearLayout>


        <LinearLayout
            android:visibility="gone"
            android:id="@+id/container_layout_settings"
            android:layout_width="0dp"
            android:clickable="true" android:focusable="true"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_view_nav_settings"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="60"
                android:contentDescription="@string/text_content_description_ic_navigation"
                app:srcCompat="@drawable/ic_settings" />

            <TextView
                android:id="@+id/text_view_nav_settings"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="40"
                android:fontFamily="@font/roboto"
                android:text="@string/text_nav_record"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_layout_notifications"
            android:layout_width="0dp"
            android:clickable="true" android:focusable="true"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_view_nav_notifications"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="60"
                android:contentDescription="@string/text_content_description_ic_navigation"
                app:srcCompat="@drawable/ic_notifications" />

            <TextView
                android:id="@+id/text_view_nav_notifications"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="40"
                android:fontFamily="@font/roboto"
                android:text="@string/text_nav_notifications"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>